update config and add 404 page

--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,10 @@ author: 邹茂萍
 ###############################################
 
 navbar-links:
-  标签: "tags"
+  书籍分享: "book"
+  工具分享: "tool"
   关于我: "aboutme"
+  标签: "tags"
 
 ################
 # --- Logo --- #
